--- a/components/pokemonList/mypokemons.html
+++ b/components/pokemonList/mypokemons.html
@@ -201,6 +201,10 @@
             border-radius: 50%;
             cursor: pointer;
         }
+        .pokemon-logo {
+            width: 210px;
+            z-index: 2;
+        }
     </style>
 </head>
 <body>
@@ -221,6 +225,7 @@
     <div class="pokedex-screen text-align-left">
         <input type="text" class="search-bar" id="searchInput" placeholder="Search Pokémon...">
         <h3>My Pokemons</h2>
+        <!-- <img src="../../assets/logo.webp" class="pokemon-logo" alt="Pokémon Logo"> -->
         <!-- Pokémon List -->
         <div class="pokemon-list" id="pokemonList">
             <!-- Pokémon items will be injected here dynamically -->
