--- a/popup.css
+++ b/popup.css
@@ -20,7 +20,7 @@ body {
 
 .menu {
     width: 60px;
-    background-color: transparent;
+    background-color: #333;
     display: flex;
     flex-direction: column;
     justify-content: flex-end; /* ✅ Push buttons to the bottom */
